--- a/docsrc/tools/templates/template.cshtml
+++ b/docsrc/tools/templates/template.cshtml
@@ -1,17 +1,17 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8"/>
+<head>
+    <meta charset="utf-8" />
     <title>@Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="@Description"/>
-    <meta name="author" content="@Properties["project-author"]"/>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="@Description" />
+    <meta name="author" content="@Properties["project-author"]" />
+    <li><a href="@Root/Documentation.html">Topic</a></li>
     <script src="https://code.jquery.com/jquery-1.8.0.js"></script>
     <script src="https://code.jquery.com/ui/1.8.23/jquery-ui.js"></script>
     <script src="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"></script>
-    <link href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=11" >
+    <link href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet" />
+    <meta http-equiv="X-UA-Compatible" content="IE=11">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <link type="text/css" rel="stylesheet" href="@Root/content/style.css" /> <!--@Root-->
     <link type="text/css" rel="stylesheet" href="@Root/style/CSBstyles.css" /> <!--@Root-->
@@ -20,7 +20,7 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <![endif]-->
-  </head>
+</head>
   <body>
     <div class="container">
       <div class="masthead">
