--- a/docsrc/tools/templates/template.cshtml
+++ b/docsrc/tools/templates/template.cshtml
@@ -39,7 +39,7 @@
           <img src="@Root/img/logo.png" alt="F# Project" style="width:150px;margin:10px" />  
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
               <li class="nav-header">@Properties["project-name"]</li>
-              <li><a href="@Root/index.html">Home page</a></li>
+              @*<li><a href="@Root/index.html">Home page</a></li>*@
               <li class="divider"></li>
               @*<li><a href="@Properties["project-nuget"]">Get Library via NuGet</a></li>*@
               <li><a href="@Properties["project-github"]">Source Code on GitHub</a></li>
